# rust-template

./: .env.example  Cargo.toml
src/: lib.rs  main.rs
src/events/: reducer.rs
src/graphql/: mod.rs  query.rs
src/infrastructure/: kafka.rs
