[package]
name = "rust-template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.7.0"
actix-web = "4.2.1"
dotenv = "0.15.0"
futures = "0.3.24"
lazy_static = "1.4.0"
rdkafka = { version = "0.28.0", features = ["cmake-build"] }
async-graphql = { version = "4.0.16", features = ["dataloader", "chrono", "chrono-tz"] }
async-graphql-actix-web = "4.0.16"